# sphinx-tosca

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py
sphinx_tosca/: __init__.py  domain.py
