[metadata]
name = sphinx-tosca
author = XLAB d.o.o.
author-email = pypi@xlab.si
summary = Sphinx ducumentation plugin for DICE TOSCA library
description-file = README.rst
home-page = https://github.com/xlab-si/sphinx-tosca
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Text Processing
    Topic :: Utilities

[files]
packages =
    sphinx_tosca

[wheel]
universal = 1

[pbr]
warnerrors = true
